# mbed_programme_bras

./: .gitmodules  Accel.cpp  CMakeLists.txt  NamedType.lib  cmake_install.cmake  compile_time_defs.txt  config_fonctions.hpp  config_motor.hpp  demo_bras.cpp  main.cpp  mbed-os.lib  mbed-os_lib  mbed_app.json  slave_to_can_or_serial.cpp  test_CAN_receive.cpp  test_SPI_master.cpp  test_SPI_slave.cpp  test_carte_pwm.cpp  test_coude.cpp  test_coude_poignet_poignet_haut_synchro.cpp  test_digitalIn.cpp  test_doigt_0.cpp  test_doigt_1-5 ensemble.cpp  test_doigt_1.cpp  test_doigt_1_a_5_ensemble.cpp  test_doigt_2.cpp  test_doigt_3.cpp  test_doigt_4.cpp  test_doigt_5.cpp  test_echo_serial.cpp  test_echo_serial_master.cpp  test_epaule_a_plat.cpp  test_epaule_coude_syncrho.cpp  test_epaule_haut.cpp  test_epaule_poignet_syncrho.cpp  test_i2c_slave.cpp  test_interruptions.cpp  test_master_and_slave_i2c.cpp  test_master_and_slave_serial.cpp  test_master_i2c.cpp  (+10 more)
.theia/: settings.json
Accel/: Accel.cpp  Accel.h
Adafruit_PWMServoDriver/: Adafruit_PWMServoDriver.cpp  Adafruit_PWMServoDriver.h  CMakeLists.txt
Counter/: Counter.cpp
MPU6050/: MPU6050.cpp  MPU6050.h
PID/: CMakeLists.txt  PID_v1.cpp  PID_v1.h
Pin_interrupt/: CMakeLists.txt  Pin_interrupt.cpp  Pin_interrupt.h
TCA9548/: TCA9548.cpp  TCA9548.h
hall_driven_motor/: CMakeLists.txt  hall_driven_motor.cpp  hall_driven_motor.h  named_type.hpp
hall_driven_motor/MotorConfig/: MotorConfig.cpp  MotorConfig.h
mbed_current_driven_motor/: CMakeLists.txt  mbed_current_driven_motor.cpp  mbed_current_driven_motor.h
mbed_hall_driven_motor/: CMakeLists.txt  mbed_hall_driven_motor.cpp  mbed_hall_driven_motor.h  named_type.hpp
pin_encoder/: CMakeLists.txt  pin_encoder.cpp  pin_encoder.h
